[project]
name = "google-adk-firestore-session"
version = "0.1.5"
description = "Firestore Session Manager for Google ADK"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Mohammad Shamma", email = "mshamma@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-adk>=1.26.0,<2.0",
    "google-cloud-firestore>=2.24.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/mohammadshamma/google-adk-firestore-session"
Repository = "https://github.com/mohammadshamma/google-adk-firestore-session"
Issues = "https://github.com/mohammadshamma/google-adk-firestore-session/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "requests",
    "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firestore_session"]
